fixed waves overflow issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,14 +34,15 @@
 }
 
 body{
-
-    background: linear-gradient(315deg, #006699 3%, #0F62FE 38%, rgb(83, 168, 234) 68%, #689cfa 98%);
-    animation: gradient 15s ease infinite;
-    background-size: 400% 400%;    background-attachment: fixed;
+  background: linear-gradient(315deg, #006699 3%, #0F62FE 38%, rgb(83, 168, 234) 68%, #689cfa 98%);
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed;
 }
 
 .App {
   text-align: center;
+  width: 100%;
 }
 
 .home {
@@ -66,12 +67,18 @@ body{
         background-position: 0% 0%;
     }
 }
-
+.wave_container{
+    display: flex;
+    height: 350px;
+    width: 1700px;
+    overflow:hidden;
+    position: relative;
+}
 .wave {
     background: rgb(255 255 255 / 25%);
     border-radius: 1000% 1000% 0 0;
     position: fixed;
-    width: 200%;
+    width: 100%;
     height: 12em;
     animation: wave 10s -3s linear infinite;
     transform: translate3d(0, 0, 0);
@@ -79,6 +86,7 @@ body{
     bottom: 0;
     left: 0;
     z-index: -1;
+    
 }
 
 .wave:nth-of-type(2) {
