--- a/frontend/src/styles/Features.css
+++ b/frontend/src/styles/Features.css
@@ -4,7 +4,6 @@
     text-align: center;
     height:100%;
     position: relative;
-    flex-grow: 1;
 }
 .hero-sec{
     position: relative;
